# VinceRAG

./: .gitignore  DOCUMENT_SCHEMA_CHANGES.md  README.md  docker-compose.yml
.kiro/specs/langchain-rag-system/: design.md  requirements.md  tasks.md
backend/: .env.example  COMPLIANCE_REPORT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  VECTOR_DATABASE_IMPLEMENTATION.md  WEB_SCRAPING_IMPLEMENTATION.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  run_tests.bat  run_tests.sh  test_admin_system.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_migration.py  0002_remove_duplicate_fields.py
backend/app/: main.py
backend/app/api/v1/: admin.py  api.py  auth.py  chat.py  chunks.py  documents.py
backend/app/core/: auth.py  celery_app.py  config.py  database.py  deps.py  health.py  logging.py  metrics.py  middleware.py  snowflake.py
backend/app/models/: __init__.py  chat.py  document.py  user.py
backend/app/schemas/: __init__.py  auth.py  chat.py  document.py
backend/app/services/: __init__.py  document_processor.py  document_service.py  rag_service.py  text_extraction.py  url_processor.py  user_service.py  vector_service.py  web_content_processor.py  web_scraper.py
backend/app/tasks/: document_tasks.py
backend/tests/: conftest.py  test_advanced_rag_features.py  test_chat_api.py  test_document_processor.py  test_document_service.py  test_models.py  test_rag_service.py  test_snowflake.py  test_text_extraction.py  test_upload_api.py  test_url_processor.py  test_vector_integration.py  test_vector_service.py  test_web_content_processor.py  test_web_scraper.py
frontend/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue  vite-env.d.ts
frontend/src/api/: admin.ts  auth.ts  chat.ts  client.ts  documents.ts  models.ts
frontend/src/components/ui/: Alert.vue  (+15 more)
frontend/src/router/: index.ts
frontend/src/stores/: app.ts  auth.ts  chat.ts  documents.ts
frontend/src/types/: index.ts
frontend/src/views/: AdminView.vue  AuthView.vue  ChatView.vue  DocumentsView.vue  SettingsView.vue
(+16 files in other folders)
